--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,3 +11,7 @@ Changelog
 1.1.2 - 2012-09-04
 ---------------------
 - Ajustes na tradução dos portlets 
+
+1.1.3 - 2012-09-20
+---------------------
+- Correção Ticket #215 - Portlet Filter Blog
